# NotLLAMA

./: .gitignore  3d-compute-fix.md  AGENTS.md  BUGS.md  CLAUDE_GENERIC.md  CMakeLists.txt  CMakeLists.txt.rej  COMPARISON-FOR-PIPELINES.MD  DEEPSEEK_CONTEXT.md  FEATURE_ROADMAP.md  FIX_INSTRUCTIONS.md  LLAMACPP-APPROACH.md  LLM-Inference-Pipeline-Flow-Diagrams.md  MiMo-task-round2.md  MiMo-task-round3.md  MiMo-task.md  NotLLAMA_USAGE.md  README.MD  TASKS_DEEPSEEK_CHAT.md  TASKS_DEEPSEEK_THINKER.md  TASKS_DEEPSEEK_THINKER.md.done  TODO.md  UPDATECODE-7.md  Update-Agents.md  Updated-Claude.md  VINDEXLLM-APPROACH.md  cpu_reference.cpp  cpu_reference.h  debug_forward.py  deepseek-chat.md  deepseek-task-round2.md  inspect_model.py  main.cpp  main.cpp.rej  mistral-audit.md  rdna4_as.py  test_cpu_ref.cpp  test_inference.cpp  test_streaming.cpp  training_AGENTS.md
Agnostic/NotLLAMA-NewApproach-Full/: BUGS.md  DEEPSEEK_CONTEXT.md  MiMo-task-round2.md  PESO_GRAPH_REPORT.md  PROMPT_INFERENCE_TEST.md  Part1.md  README-NewApproach.md  STATUS-NOTLLAMA.md  TASKS_CLINE.md  TASKS_DEEPSEEK_THINKER.md  TODO.md  VULKANCOMPUTEFIXES.md  cpu_reference.h  deepseek-task-round3.md  main.cpp  peso.json  verify_dequant.py
Agnostic/NotLLAMA-NewApproach-Full/NANFIX/: README_FIX.md  inference_engine.cpp
Agnostic/NotLLAMA-NewApproach-Full/docs/: turboquant_formats.md
Agnostic/NotLLAMA-NewApproach-Full/evenmore-fixes-speedup/: 03_remove_layerfence_synclayer.patch  10_main_init_weightbuffer.patch  NotLLAMA_Phase2_Architecture.md
Agnostic/NotLLAMA-NewApproach-Full/fixes-check-kimi/: 01_fix_embed_and_forward_sync.patch  NotLLAMA_DeepDive_Analysis.md
Agnostic/NotLLAMA-NewApproach-Full/include/: rdna4_allocator.hpp  rdna4_graphify.hpp  rdna4_kv_cache.hpp  rdna4_model_registry.hpp  rdna4_offload.hpp  rdna4_pipeline.hpp  rdna4_sampler.hpp  rdna4_server.hpp  rdna4_tokenizer.hpp  rdna4_turboquant.hpp  rdna4_vgpr.hpp  rdna4_vision.hpp  rdna4_vulkan.hpp
Agnostic/NotLLAMA-NewApproach-Full/speed-singlecommandbuffer/: 13_single_cmdbuffer_forwardPartial.patch  README_SingleCmdBuffer.md
Agnostic/NotLLAMA-NewApproach-Full/tasker/: DEEPSEEK_REASONER_TASK.md  KIMI_TASK.md  (+4 more)
CHEC-QUANT-ERROR/: README.md  dequantize.comp  embed_q8_0.comp  matvec_all.comp
Finalfixes/NotLLAMA-fix/: .gitignore
NANFIX/: scheduler.cpp
NotLLAMA-Fixes/: README_FIXES.md  apply_all_patches.sh  inference_engine.patch  rms_norm.patch  rope.patch
Patches-dont-sync-to-git/: CMakeLists.txt.patch.txt  PATCH_NOTES.md  include_engine_vulkan_compute_engine.hpp  main.cpp_loop_fix.txt  shaders_rope.comp.patch.txt  src_engine_vulkan_compute_engine.cpp  src_loaders_gguf.cpp
backup/2026-06-29_dequant_tdr_fix/: inference_engine.cpp  scheduler.cpp  test_inference.cpp
docs/: compression_integration.md  dequant_chunking_trace.md  fence_pool_design.md  gguf_spec_summary.md  kv_compression.md
docs/vulkan-sdk/: execution-vs-memory.md
evenmore-fixes-speedup/: 07_init_kernelentryready.patch  08_single_cmdbuffer_predequant.patch  09_inference_engine_hpp.patch
fixed-speedup/: 11_single_cmdbuffer_per_token.patch  NotLLAMA_PatchReview.md
fixes-check-kimi/: 02_fix_main_turbo_ring_cleanup.patch  04_dequantize_safe_readbyte.patch
include/: agent_node.hpp  cli_parser.hpp  inference_runner.hpp  layer_swap_manager.hpp  memory_tier.hpp  model_router.hpp  mtp_engine.hpp  multi_model_manager.hpp  rdna4.hpp  rdna4_allocator.hpp  rdna4_compression.hpp  rdna4_compression_scheduler.hpp  rdna4_engine.hpp  rdna4_kv_cache.hpp  rdna4_moe.hpp  rdna4_pipeline.hpp  rdna4_profiler.hpp  rdna4_scheduler.hpp  rdna4_types.hpp  rdna4_vgpr.hpp  rdna4_vulkan.hpp  rdna4_weights.hpp  web_server.hpp  web_server.hpp.rej
include/engine/: idescriptor_manager.hpp  imodel.hpp  ishader_library.hpp  kv_cache_adapter.hpp  model_adapter.hpp  ring_allocator_adapter.hpp  tokenizer_adapter.hpp  vulkan_compute_engine.hpp
raw/: docs_vulkan_org_spec_latest_index_html.md
removed-because-broken-quant-dequant-pipeline/: dequant_turbo.comp  dequantize.comp  embed_q6_k.comp  embed_q8_0.comp  gemm_turbo.comp  matvec_q4_0.comp  matvec_q6_k.comp  matvec_q8_0.comp
shaders/: add_rms_norm.comp  attention.comp  attention_softmax.comp  gemm_q1_0.comp  gemm_q2_k.comp  gemm_q3_k.comp  gemm_q4_0.comp  gemm_q5_k.comp  gemm_q6k.comp  gemm_q8_0.comp  kv_cache_quantize.comp  kv_cache_quantize_q8_0.comp  matmul_q4_0.comp  moe_experts.comp  moe_router.comp  rms_norm_mul.comp  rope.comp  silu_mul.comp  topk.comp
shaders/src/: argmax.comp  attention_softmax.comp  gemm_q4_0.comp  gemm_q8_0.comp  test_wave32.comp
speed-singlecommandbuffer/: 06_attention_uniform_softmax.patch  12_dequantWeightInBatch.patch
speedfix3/: 05_weight_uploader_align4.patch
src/core/: context.cpp
src/engine/: AGENTS.md  layer_swap_manager.cpp  model_adapter.cpp  ring_allocator_adapter.cpp  vulkan_compute_engine.cpp  vulkan_shader_library.cpp
src/host/: agent_node.cpp  allocator.cpp  cli_parser.cpp  context.cpp  graphify_client.cpp  inference_engine.cpp  inference_runner.cpp  kv_cache.cpp  mailbox.cpp  memory.cpp  memory_tier.cpp  multi_model_manager.cpp  pipeline_builder.cpp  profiler.cpp  scheduler.cpp  tokenizer.cpp  turboquant_dispatch.cpp  vgpr_stub.cpp  web_server.cpp  web_server.cpp.rej  weight_uploader.cpp
src/kernels/: AGENTS.md  attention.comp  compress_context.comp  cooperative_gemm.comp  dequantize.comp  embed.comp  embed_q6_k.comp  flash_attention.comp  gemm.comp  gemm_coopmat.comp  gemm_q4k.comp  gemm_q6k.comp  gemm_turbo.comp  kernel_entry.comp  kv_cache_dequant.comp  kv_cache_write.comp  matvec_q4_0.comp  matvec_q6_k.comp  matvec_q8_0.comp  mlp.comp  rms_norm.comp  rope.comp  topk.comp
src/loaders/: gguf.cpp  gguf.h
tasker/: ARCHITECTURE.md  DEEPSEEK_TASK.md  TASK_QUEUE.md  complete.ps1  lock.ps1  orchestrator.ps1  safe-dispatch.ps1
tasker/pending/: fix_001_rope_naming.json
test/: test_engine.cpp  test_shader_compile.cpp
tests/: test_multi_token.cpp
tools/: AGENTS.md  check_layout.py  check_layout2.py  check_layout3.py  convert_gguf_to_turboquant.py  gguf_loader.py  rdna4_as.py  weight_converter.py
(+200 files in other folders)
